[gd_scene load_steps=12 format=3 uid="uid://cdbr4loxr3p4t"]

[ext_resource type="Texture2D" uid="uid://c60akjrr0sjmb" path="res://assets/grass.png" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://fsdfmvwup72i" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://cg2qbmuol5qi0" path="res://coin.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dqfsc4adh0wpl" path="res://player.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://c2868wpgec0sn" path="res://powerup.tscn" id="3_4c57u"]
[ext_resource type="PackedScene" uid="uid://dch53kh66pr01" path="res://cactus.tscn" id="4_efxa6"]
[ext_resource type="PackedScene" uid="uid://2wx2vo6gmth5" path="res://hud.tscn" id="5_lquwl"]
[ext_resource type="AudioStream" uid="uid://buyvo0ops0gty" path="res://assets/audio/Coin.wav" id="6_5vw27"]
[ext_resource type="AudioStream" uid="uid://bfula5sasqfxs" path="res://assets/audio/Level.wav" id="7_kek77"]
[ext_resource type="AudioStream" uid="uid://chfhb12qolub7" path="res://assets/audio/EndSound.wav" id="8_4c57u"]
[ext_resource type="AudioStream" uid="uid://djkfl7odawf7i" path="res://assets/audio/Powerup.wav" id="9_kek77"]

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
coinScene = ExtResource("2_1bvp3")
powerupScene = ExtResource("3_4c57u")
cactusScene = ExtResource("4_efxa6")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0xm2m")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_h2yge")]

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_lquwl")]

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5vw27")

[node name="LevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kek77")

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4c57u")

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_kek77")

[connection signal="hurt" from="Player" to="." method="onPlayerHurt"]
[connection signal="pickup" from="Player" to="." method="onPlayerPickup"]
[connection signal="timeout" from="GameTimer" to="." method="onGameTimerTimeout"]
[connection signal="startGame" from="HUD" to="." method="onHudStartGame"]
[connection signal="timeout" from="PowerupTimer" to="." method="onPowerupTimerTimeout"]
